add: スクロールバーを隠すユーティリティクラスを追加

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,3 +4,11 @@
     lemonade --default,
     coffee --prefersdark;
 }
+
+@utility scrollbar-hidden {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+  &::-webkit-scrollbar {
+    display: none;
+  }
+}
